Bug 14939 - smbclient -L doesn't set "client max protocol" to NT1 before calling the "Reconnecting with SMB1 for workgroup listing" path.
Summary: smbclient -L doesn't set "client max protocol" to NT1 before calling the "Rec...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.15.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-04 00:16 UTC by Jeremy Allison
Modified: 2022-01-19 15:28 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.15.next. (5.22 KB, patch)
2022-01-07 20:41 UTC, Jeremy Allison
npower: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2022-01-04 00:16:03 UTC
This leads "normal" smbclient usage to print the error:

smb1cli_req_writev_submit: called for dialect[SMB3_11] server[FILESERVERSMB1]

when trying to detect if the FILESERVERSMB1 server is up in make tests.
Comment 1 Jeremy Allison 2022-01-04 01:05:01 UTC
gitlab ci run of the patch here:

https://gitlab.com/samba-team/devel/samba/-/pipelines/440782897
Comment 3 Samba QA Contact 2022-01-06 11:51:12 UTC
This bug was referenced in samba master:

0d9d1546a7bad6e0fac58e146a75e4eb1ce78c11
099c62a654da2623653218c771dd8fabdc7cc091
Comment 4 Jeremy Allison 2022-01-07 20:41:33 UTC
Created attachment 17075 [details]
git-am fix for 4.15.next.

Cherry-pick from master.
Comment 5 Noel Power 2022-01-10 14:52:59 UTC
Comment on attachment 17075 [details]
git-am fix for 4.15.next.

lgtm
Comment 6 Jeremy Allison 2022-01-10 16:43:41 UTC
Re-assigning to Jule for inclusion in 4.15.next.
Comment 7 Jule Anger 2022-01-12 11:11:25 UTC
Pushed to autobuild-v4-15-test.
Comment 8 Samba QA Contact 2022-01-12 12:55:35 UTC
This bug was referenced in samba v4-15-test:

4907ecaaf4e28b4a4d6bafbed83925494eff601e
4a6e8bc5e29cc13e10e1c59a7968edd6eb5bda62
Comment 9 Jule Anger 2022-01-12 13:35:06 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2022-01-19 15:28:35 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.4):

4907ecaaf4e28b4a4d6bafbed83925494eff601e
4a6e8bc5e29cc13e10e1c59a7968edd6eb5bda62